// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppConfirmInstallContent render correctly 1`] = `
<div
  data-test="confirm-content"
>
  <h3
    className="title is3 undefined"
  >
    Please confim you agree to the permissions before installing
  </h3>
  <h6>
    This 
    mockAppName
     equires the following permissions, please click ‘Agree’ to continue to the installation.
  </h6>
  <ul>
    <li
      key="Marketplace/developers.read"
    >
      Read data about developers
    </li>
  </ul>
  <div>
    <Button
      dataTest="agree-btn"
      loading={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Agree
    </Button>
    <Button
      dataTest="disagree-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="danger"
    >
      Disagree
    </Button>
  </div>
</div>
`;

exports[`AppConfirmInstallContent render correctly 2`] = `
<div
  data-test="confirm-content"
>
  <h3
    className="title is3 undefined"
  >
    Please confim you agree to the permissions before installing
  </h3>
  <h6>
    This 
    mockAppName
     equires the following permissions, please click ‘Agree’ to continue to the installation.
  </h6>
  <ul>
    <li
      key="Marketplace/developers.read"
    >
      Read data about developers
    </li>
  </ul>
  <div>
    <Button
      dataTest="agree-btn"
      loading={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Agree
    </Button>
    <Button
      dataTest="disagree-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="danger"
    >
      Disagree
    </Button>
  </div>
</div>
`;

exports[`AppConfirmInstallContent render correctly 3`] = `
<div
  data-test="confirm-content"
>
  <h3
    className="title is3 undefined"
  >
    Please confim you agree to the permissions before installing
  </h3>
  <h6>
    This 
    mockAppName
     equires the following permissions, please click ‘Agree’ to continue to the installation.
  </h6>
  <ul>
    <li
      key="Marketplace/developers.read"
    >
      Read data about developers
    </li>
  </ul>
  <div>
    <Button
      dataTest="agree-btn"
      loading={true}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Agree
    </Button>
    <Button
      dataTest="disagree-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
      variant="danger"
    >
      Disagree
    </Button>
  </div>
</div>
`;

exports[`AppConfirmInstallContent render correctly 4`] = `
<div
  data-test="confirm-content"
>
  <h3
    className="title is3 undefined"
  >
    Please confim you agree to the permissions before installing
  </h3>
  <h6>
    This 
    mockAppName
     equires the following permissions, please click ‘Agree’ to continue to the installation.
  </h6>
  <ul>
    <li
      key="Marketplace/developers.read"
    >
      Read data about developers
    </li>
  </ul>
  <div>
    <Button
      dataTest="agree-btn"
      loading={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Agree
    </Button>
    <Button
      dataTest="disagree-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="danger"
    >
      Disagree
    </Button>
  </div>
</div>
`;

exports[`AppConfirmInstallContent render correctly 5`] = `""`;
